@@ -2,6 +2,8 @@ AUX all.patch 5663 RMD160 c1768d66fe7bfbcb792f25aa5de3a55b0ba3b44f SHA1 973560be
 AUX disable-debootstrap-configure.ac.patch 873 RMD160 ba5566ebe8c86c4c87b88967dc44e9d9b754bbb9 SHA1 51d82b19fb93a18bd9e82e676d2a1bd0bcffc186 SHA256 1e6db347ebdce570af8108f07721676eeb7c18291a0fd23613ea7217baea4081
 DIST libguestfs-1.5.19-x86_64.tar.gz 45678068 RMD160 92a36e43765b83827f8ec94ebe5bf87716df0af5 SHA1 7d1701bc4e180e97d01c309d1779d1328ae7f77d SHA256 6b650a33c469902a7742ef2d60d1a6b6ea5d399917c301a03ba39c449ad661f3
 DIST libguestfs-1.5.21.tar.gz 4343061 RMD160 3cd976d17fa2341a04127169b7df5397e84e4d0c SHA1 02415d22a5c94f854efc2af5d1d8ae61bfa5b153 SHA256 1480fb9aea72912250f9e44e05cd4c5d9bf29472e4ae30b716babd6e405a432c
+DIST libguestfs-1.5.26.tar.gz 4354423 RMD160 a44ff096fd3b017485978c2354d688fcd6cee125 SHA1 0e1a26c2fb9a66334a5b7f5f9807f41d28e9f903 SHA256 9188bb0a0c7e43b6e3ba7269f8b94ca96a933458fd900e6738a88df98c61303a
 EBUILD libguestfs-1.5.21.ebuild 2331 RMD160 aa6c6d612eb0bf75f8429f7edcd795f362188843 SHA1 87319cec248008e11be8d0c15627701b2b28fd13 SHA256 fae478e6e2edec8e9c1716781675c673f5142aa53c8bc34db6bd62aff7790308
-MISC ChangeLog 1465 RMD160 b6ec327e8e06166f4fa23fd12d63bba9da614b86 SHA1 bbe265b4c59a8b5842346ba68d25a57e6761ed8c SHA256 e3814f25801d4d0c0471682404879f5ff353cea895f049475e5b4a2c9254f606
+EBUILD libguestfs-1.5.26.ebuild 2331 RMD160 aa6c6d612eb0bf75f8429f7edcd795f362188843 SHA1 87319cec248008e11be8d0c15627701b2b28fd13 SHA256 fae478e6e2edec8e9c1716781675c673f5142aa53c8bc34db6bd62aff7790308
+MISC ChangeLog 1555 RMD160 dc3c8a7ef98fb0b6b8f8e74af00455727e27c413 SHA1 10934f90cbf4d7d237bc42ff2ee05b1a170417ab SHA256 2d502dd9cb0b914aa69096701116ff2e4601170b4627b7767e59cccb5901aab3
 MISC metadata.xml 562 RMD160 236fe644daef419449d9f221c2cbff057f62ed9a SHA1 444306dfb074e27e8f5cac4fbb6ef0b3276ea8d4 SHA256 c7c27e8d190942aaaef515d322529b47a1b399782f1157177dca2340380c3630
